# need-checks

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
need_checks/: __init__.py  action.py  context.py  errors.py  types.py  ui.py
scripts/: bump.sh  post-bump.sh  readme.py
tests/: conftest.py  factories.py  test_action.py  test_context.py  test_need_checks.py  test_ui.py
